--- a/comentarios.html
+++ b/comentarios.html
@@ -4,19 +4,35 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LUCIO - Projeto 01 - Comentários</title>
+        <title>Projeto 1 - Comentários</title>
+        <link rel="stylesheet" href="./comentarios.css">
     </head>
     <body>
-        <header> 
-
+        <header>
+            <nav>
+                <ul>
+                    <li ><a href="index.html">Home</a></li>
+                    <li ><a href="contato.html">Contato</a></li>
+                    <li ><a href="fotos.html">Fotos</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
-            <h1>Página de Comentários</h1>
+            <img class="construction" src="./under_construction.png" alt="Site em construção">
         </main>
 
         <footer>
-
+            <div>
+                <img style="object-fit: contain;" id="logofooter" src="./LOGO LF menor.png" alt="Logo LF Tecnologia"/>
+            </div>
+            <div>
+                <span id="spanfooter">
+                    <p>Todos Direitos Reservados</p>
+                    <p>Copyright © 2024</p>
+                    <p>Desenvolvido por: LUCIO FLAVIO SANTOS</p>
+                </span>
+            </div>
         </footer>
     </body>
 </html>
