Atualizando todas as 4 paginas
Atualização

--- a/contato.html
+++ b/contato.html
@@ -14,8 +14,8 @@
             <ul>
                 <a href="./index.html"><li>Home</li></a>
                 <a href="./contato.html"><li>Contato</li></a>
-                <a href="./fotos.html" target="_blank"><li>Fotos</li></a>
-                <a href="./comentarios.html" target="_blank"><li>Comentários</li></a>
+                <a href="./fotos.html"><li>Fotos</li></a>
+                <a href="./comentarios.html"><li>Comentários</li></a>
             </ul>
         </nav>
     </header>  
