--- a/fotos.html
+++ b/fotos.html
@@ -9,17 +9,24 @@
     </head>
     <body>
         <header>
-            <nav>
+            <img class="logoheader" src="./logobatman-removebg-preview.png" alt="Logo Batman">
+            <nav class="navigation">
                 <ul>
-                    <li ><a href="index.html">Home</a></li>
-                    <li ><a href="contato.html">Contato</a></li>
-                    <li ><a href="comentarios.html">Comentários</a></li>
+                    <a href="./index.html"><li>Home</li></a>
+                    <a href="./contato.html"><li>Contato</li></a>
+                    <a href="./fotos.html"><li>Fotos</li></a>
+                    <a href="./comentarios.html"><li>Comentários</li></a>
                 </ul>
             </nav>
         </header>
-
+        
         <main>
-            <img class="construction" src="./under_construction.png" alt="Site em construção">
+            <div class="banner">
+                
+            </div>
+            <div>
+                <img class="construction" src="./under_construction.png" alt="Site em construção">
+            </div>
         </main>
 
         <footer>
