--- a/index.html
+++ b/index.html
@@ -50,17 +50,24 @@
         </main>
         
         <footer>
-            <div>
-                <img style="object-fit: contain;" id="logofooter" src="./LOGO LF menor.png" alt="Logo LF Tecnologia"/>
+            <div class="logoLF">
+                <div class="logoLFimage">
+                    <img style="object-fit: contain;" id="logofooter" src="./LOGO LF menor.png" alt="Logo LF Tecnologia"/>
+                </div>
+
+                <div>
+                    <span id="spanfooter">
+                        <p>Todos Direitos Reservados</p>
+                        <p>Copyright © 2024</p>
+                        <p>
+                            .....
+                        </p>
+                        <p style="font-weight: inherit; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Desenvolvido por: </p>
+                        <p style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">LUCIO FLAVIO SANTOS</p>
+                    </span>
+                </div>
             </div>
 
-            <div>
-                <span id="spanfooter">
-                    <p>Todos Direitos Reservados</p>
-                    <p>Copyright © 2024</p>
-                    <p>Desenvolvido por: LUCIO FLAVIO SANTOS</p>
-                </span>
-            </div>
                        
             <nav class="footer-nav">
                 <ul class="footer-list">
